@@ -64,8 +64,11 @@ public class Body implements Cloneable {
 
     // yeah i know :(
     public static BodyPart nonePart = new GenericBodyPart("none", 0, 1, 1, "none", "");
-    private static Set<String> pluralParts = new HashSet<>(Arrays.asList(HandsPart.TYPE,
-        FeetPart.TYPE, WingsPart.TYPE, BreastsPart.TYPE, Body.BALLS));
+    private static Set<String> pluralParts = Set.of(HandsPart.TYPE,
+        FeetPart.TYPE,
+        WingsPart.TYPE,
+        BreastsPart.TYPE,
+        Body.BALLS);
     private final static BodyPart[] requiredParts = {
         new HandsPart(),
         new FeetPart(),
